--- a/index.Rmd
+++ b/index.Rmd
@@ -1,9 +1,10 @@
 ---
   title: "Alec Trusty, B.S."
 ---
-  
-Welcome to my professional website & portfolio! Currently, I work as a Data & Research Analyst out of Portland, Oregon, U.S. I specialize in Geographic Information Science (GIS) and aspire to apply my analytical skills in finding solutions to social and ecological issues.
+
+_Welcome._  
+I work as a Data & Research Analyst out of Portland, Oregon, U.S. I specialize in Geographic Information Science (GIS) and aspire to apply my analytical skills in finding solutions to social and ecological issues.
 
 When i'm not geeking out I like to write and perform music, dream about traveling with my partner, and get some quality time in with family and friends.
 
-This website is still under construction... Feel free to snoop around and find what you can, otherwise check back soon.
+This website is still under construction, but feel free to look around, you might be surprised by what you find!
