--- a/projects.Rmd
+++ b/projects.Rmd
@@ -12,7 +12,7 @@ title: "Projects"
 
 #### [Spatializing Yelp Businesses](http://www.alectrusty.com/projects/yelpscrape.html)
 
-## Research
+## Research & Statistics
 
 #### [Portland Energy Expenditure Research](http://www.alectrusty.com/projects/expr.html)
 
