--- a/about.Rmd
+++ b/about.Rmd
@@ -6,4 +6,4 @@ I work as a Data & Research Analyst out of Portland, Oregon, U.S. My specialty i
 
 When i'm not geeking out I like to write and perform music, dream about traveling with my partner, and get some quality time in with family and friends.
 
-![](img/guy.jpg)
+![](img/me.jpg)
