--- a/about.Rmd
+++ b/about.Rmd
@@ -2,8 +2,8 @@
   title: "About"
 ---
 
-I work as a Data & Research Analyst out of Portland, Oregon, U.S. My specialty is in Geographic Information Science (GIS) and aspire to apply my analytical skills in finding solutions to social and ecological issues.
+In the spring of 2017 I completed my Bachelor's of Environmental Science at Portland State University and I currently work as a Data & Research Analyst out of Portland, Oregon, U.S. Over the last two years I've focused on honing in my skills in GIS, data wrangling, and advanced statistics with the hope of later applying those skills to tackle big issues in ecological sustainability.
 
-When i'm not geeking out I like to write and perform music, dream about traveling with my partner, and get some quality time in with family and friends.
+When i'm not geeking out I like to write and perform music, dream about traveling with my partner, explore my city by bicycle, and get some quality time in with family and friends.
 
 ![](img/me2.jpg)
